--- a/.github/workflows/Build-Documentation.yml
+++ b/.github/workflows/Build-Documentation.yml
@@ -50,17 +50,21 @@ jobs:
         
     - name: Sphinx build
       run: |
-        cd ${{ github.event.repository.name }}/docs
-        make html
+        pwd
+        ls -l
+        ls -l *
+        #cd ${{ github.event.repository.name }}/docs
+        #make html
 
     - name: Copy on riseclipse.github.io
       run: |
+        pwd
         cp -r ${{ github.event.repository.name }}/docs/_build/html riseclipse-temporary/python-launcher-docs/
 
     - name: Commit and push to GitHub
       run: |
         cd riseclipse-temporary
-        git add --all
-        git commit -m "New version of documentation of python-launcher"
-        git push
+        #git add --all
+        #git commit -m "New version of documentation of python-launcher"
+        #git push
 
