--- a/.github/workflows/Build-Documentation.yml
+++ b/.github/workflows/Build-Documentation.yml
@@ -53,17 +53,18 @@ jobs:
         pwd
         ls -l
         ls -l *
-        #cd ${{ github.event.repository.name }}/docs
-        #make html
+        cd ${{ github.event.repository.name }}/fr.centralesupelec.edf.riseclipse.python.launcher/docs
+        make html
 
     - name: Copy on riseclipse.github.io
       run: |
         pwd
-        cp -r ${{ github.event.repository.name }}/docs/_build/html riseclipse-temporary/python-launcher-docs/
+        cp -r ${{ github.event.repository.name }}/fr.centralesupelec.edf.riseclipse.python.launcher/docs/_build/html riseclipse-temporary/python-launcher-docs/
 
     - name: Commit and push to GitHub
       run: |
         cd riseclipse-temporary
+        ls -l
         #git add --all
         #git commit -m "New version of documentation of python-launcher"
         #git push
