--- a/.github/workflows/Build-Documentation.yml
+++ b/.github/workflows/Build-Documentation.yml
@@ -58,7 +58,7 @@ jobs:
       env:
         SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
       with:
-        source-directory: '_build/html'
+        source-directory: '${{ github.event.repository.name }}/fr.centralesupelec.edf.riseclipse.python.launcher/docs/_build/html'
         destination-github-username: 'riseclipse'
         destination-repository-name: 'riseclipse-temporary'
         user-email: riseclipse@gmail.com
